# MCP-Kali

./: .gitignore  LICENSE  QUICKSTART.md  README.md  SECURITY.md  config.json  install.sh  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py
kali_mcp_server/: __init__.py  base.py  complete_server.py  enumeration.py  main.py  network_recon.py  osint.py  server.py  ssl_network.py  subdomain_enum.py  web_analysis.py  wireless.py
