[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kali-mcp-server"
version = "1.0.0"
description = "MCP server for Kali Linux penetration testing tools"
authors = [{name = "Kali MCP Server", email = "admin@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
kali-mcp-server = "kali_mcp_server.main:main"

[project.urls]
Homepage = "https://github.com/example/kali-mcp-server"
Repository = "https://github.com/example/kali-mcp-server.git"
Issues = "https://github.com/example/kali-mcp-server/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["kali_mcp_server*"]
